--- a/Script/Setting/Language/en-us.json
+++ b/Script/Setting/Language/en-us.json
@@ -549,34 +549,34 @@
 	"popcap.zlib.uncompress.mismatch_zlib_magic": "Mismatch Zlib magic, should begin with",
 	"popcap.zlib.uncompress.use_64_bit_variant": "Use 64-bit variant",
 	"process": "process",
-	"pvz2.scg.animation_split_label": "Animation Split Label",
-	"pvz2.scg.decode": "PvZ2 Sen-Composite-Group: Decode",
-	"pvz2.scg.decode.generic": "Decode Method",
-	"pvz2.scg.enable_debug": "Enable Debug",
-	"pvz2.scg.encode": "PvZ2 Sen-Composite-Group: Encode",
-	"pvz2.scg.encode.generic": "Encode Method",
+	"project.scg.animation_split_label": "Animation Split Label",
+	"project.scg.decode": "PvZ2 Sen-Composite-Group: Decode",
+	"project.scg.decode.generic": "Decode Method",
+	"project.scg.enable_debug": "Enable Debug",
+	"project.scg.encode": "PvZ2 Sen-Composite-Group: Encode",
+	"project.scg.encode.generic": "Encode Method",
 	"pvz2.project.compile": "PvZ 2 Project: Compile",
 	"pvz2.project.create": "PvZ 2 Project: Create",
-	"pvz2.scg.general_cannot_cotain_image": "SCG composite is false, so it cannot contain \"Image\" type",
-	"pvz2.scg.invalid_data_type": "Invalid data type, got: {} which is not defined in the data table",
-	"pvz2.scg.invalid_image_format": "Invalid image format, got: {} which is not defined in the format table",
-	"pvz2.scg.invalid_resource_content_size": "Invalid resource content size, got: {} but expected: {}",
-	"pvz2.scg.invalid_resource_content_version": "Invalid resource content version, got: {} but expected: {}",
-	"pvz2.scg.invalid_scg_magic": "Mismatch SCG magic, should begins with \"1gcs\"",
-	"pvz2.scg.invalid_scg_version": "Invalid SCG version, got: {} but expected version to be 4",
-	"pvz2.scg.invalid_texture_format_category": "Invalid texture format category",
-	"pvz2.scg.mismatch_image_height": "Mismatch image height at {}, {} in image and {} in info",
-	"pvz2.scg.mismatch_image_width": "Mismatch image width at {}, {} in image and {} in info",
-	"pvz2.scg.must_be_bnk_file": "Item {} must be file with \".rton\" extension",
-	"pvz2.scg.must_be_folder_and_no_file_extension": "Item {} must be folder with no extension",
-	"pvz2.scg.must_be_image_type": "DataType in {} must be \"Image\"",
-	"pvz2.scg.must_be_json_file": "Item {} must be file with \".json\" extension",
-	"pvz2.scg.must_be_pam_file": "Item {} must be file with \".pam\" extension",
-	"pvz2.scg.must_be_popanim_type": "Item {} must be \"PopAnim\" type",
-	"pvz2.scg.must_be_rton_file": "Item {} must be file with \".rton\" extension",
-	"pvz2.scg.pam_is_corrupted": "Item {} is a corrupted pam.",
-	"pvz2.scg.resolution_mismatch": "Mismatch resolution at {}, {} in SCG and {} in animation",
-	"pvz2.scg.same_id_but_image_mismatch": "Animations use the same {} image ID, but they're mismatch",
+	"project.scg.general_cannot_cotain_image": "SCG composite is false, so it cannot contain \"Image\" type",
+	"project.scg.invalid_data_type": "Invalid data type, got: {} which is not defined in the data table",
+	"project.scg.invalid_image_format": "Invalid image format, got: {} which is not defined in the format table",
+	"project.scg.invalid_resource_content_size": "Invalid resource content size, got: {} but expected: {}",
+	"project.scg.invalid_resource_content_version": "Invalid resource content version, got: {} but expected: {}",
+	"project.scg.invalid_scg_magic": "Mismatch SCG magic, should begins with \"1gcs\"",
+	"project.scg.invalid_scg_version": "Invalid SCG version, got: {} but expected version to be 4",
+	"project.scg.invalid_texture_format_category": "Invalid texture format category",
+	"project.scg.mismatch_image_height": "Mismatch image height at {}, {} in image and {} in info",
+	"project.scg.mismatch_image_width": "Mismatch image width at {}, {} in image and {} in info",
+	"project.scg.must_be_bnk_file": "Item {} must be file with \".rton\" extension",
+	"project.scg.must_be_folder_and_no_file_extension": "Item {} must be folder with no extension",
+	"project.scg.must_be_image_type": "DataType in {} must be \"Image\"",
+	"project.scg.must_be_json_file": "Item {} must be file with \".json\" extension",
+	"project.scg.must_be_pam_file": "Item {} must be file with \".pam\" extension",
+	"project.scg.must_be_popanim_type": "Item {} must be \"PopAnim\" type",
+	"project.scg.must_be_rton_file": "Item {} must be file with \".rton\" extension",
+	"project.scg.pam_is_corrupted": "Item {} is a corrupted pam.",
+	"project.scg.resolution_mismatch": "Mismatch resolution at {}, {} in SCG and {} in animation",
+	"project.scg.same_id_but_image_mismatch": "Animations use the same {} image ID, but they're mismatch",
 	"pvz2_android_cn": "Android PvZ 2 Chinese version",
 	"read_position_cannot_be_smaller_than_size": "Read position cannot be smaller than size, got: {}, size: {}",
 	"result": "Result",
@@ -715,8 +715,8 @@
 	"input_type": "Input type",
 	"input_number_to_process_batch_function": "Input number to process batch function",
 	"input_directory": "Input directory",
-	"pvz2.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
-	"pvz2.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
+	"project.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
+	"project.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
 	"popcap.animation.from_flash.frame_index_is_not_a_number": "Frame index is not a number, sprite: {}, value: {}",
 	"popcap.animation.from_flash.frame_duration_is_not_a_number": "Frame duration is not a number, sprite: {}, value: {}",
 	"popcap.animation.from_flash.animation_must_have_one_label": "Animation must have at least one label",
