--- a/Script/Setting/Language/es-es.json
+++ b/Script/Setting/Language/es-es.json
@@ -499,34 +499,34 @@
 	"popcap.zlib.uncompress.mismatch_zlib_magic": "Magic de Zlib incorrecto, debería empezar con",
 	"popcap.zlib.uncompress.use_64_bit_variant": "Usar variante 64-bit",
 	"process": "proceso",
-	"pvz2.scg.animation_split_label": "Dividir labels de la animación",
-	"pvz2.scg.decode": "PvZ2 Sen-Composite-Group: Decodificar",
-	"pvz2.scg.decode.generic": "Método de decodificación",
-	"pvz2.scg.enable_debug": "Activar Debug",
-	"pvz2.scg.encode": "PvZ2 Sen-Composite-Group: Codificar",
-	"pvz2.scg.encode.generic": "Método de codificación",
+	"project.scg.animation_split_label": "Dividir labels de la animación",
+	"project.scg.decode": "PvZ2 Sen-Composite-Group: Decodificar",
+	"project.scg.decode.generic": "Método de decodificación",
+	"project.scg.enable_debug": "Activar Debug",
+	"project.scg.encode": "PvZ2 Sen-Composite-Group: Codificar",
+	"project.scg.encode.generic": "Método de codificación",
 	"pvz2.project.compile": "PvZ 2 Proyecto: Compilar",
 	"pvz2.project.create": "PvZ 2 Proyecto: Crear",
-	"pvz2.scg.general_cannot_cotain_image": "Composite de SCG es falso, por lo que no tiene tipo \"Image\"",
-	"pvz2.scg.invalid_data_type": "Tipo de datos no válido, se obtuvo: {} lo cual no está definido en la tabla de datos",
-	"pvz2.scg.invalid_image_format": "Formato de imagen no válido, se obtuvo: {} lo cual no está definido en la tabla de formatos",
-	"pvz2.scg.invalid_resource_content_size": "Tamaño de contenido de recurso no válido, se obtuvo: {} pero se esperaba: {}",
-	"pvz2.scg.invalid_resource_content_version": "Versión de contenido de recurso no válida, se obtuvo: {} pero se esperaba: {}",
-	"pvz2.scg.invalid_scg_magic": "Magic de SCG incorrecto, debería empezar con \"1gcs\"",
-	"pvz2.scg.invalid_scg_version": "Versión de SCG no válida, se obtuvo: {} pero se esperaba 4",
-	"pvz2.scg.invalid_texture_format_category": "Categoría de formato de textura no válida",
-	"pvz2.scg.mismatch_image_height": "Altura de imagen incorrecta en {} en image y {} en info",
-	"pvz2.scg.mismatch_image_width": "Ancho de imagen incorrecta en {}, {} en image y {} en info",
-	"pvz2.scg.must_be_bnk_file": "Item {} debe ser un archivo con extensión \".rton\"",
-	"pvz2.scg.must_be_folder_and_no_file_extension": "Item {} debe ser un folder sin extensión",
-	"pvz2.scg.must_be_image_type": "DataType en {} debe ser \"Image\"",
-	"pvz2.scg.must_be_json_file": "Item {} debe ser un archivo con extensión \".json\"",
-	"pvz2.scg.must_be_pam_file": "Item {} debe ser un archivo con extensión \".pam\"",
-	"pvz2.scg.must_be_popanim_type": "Item {} debe ser de tipo \"PopAnim\"",
-	"pvz2.scg.must_be_rton_file": "Item {} debe ser un archivo con extensión \".rton\"",
-	"pvz2.scg.pam_is_corrupted": "Item {} es un pam corrupto.",
-	"pvz2.scg.resolution_mismatch": "Resolución incorrecta en {}, {} en SCG y {} en animación",
-	"pvz2.scg.same_id_but_image_mismatch": "Las animaciones usan el mismo image de ID {}, pero no concuerda",
+	"project.scg.general_cannot_cotain_image": "Composite de SCG es falso, por lo que no tiene tipo \"Image\"",
+	"project.scg.invalid_data_type": "Tipo de datos no válido, se obtuvo: {} lo cual no está definido en la tabla de datos",
+	"project.scg.invalid_image_format": "Formato de imagen no válido, se obtuvo: {} lo cual no está definido en la tabla de formatos",
+	"project.scg.invalid_resource_content_size": "Tamaño de contenido de recurso no válido, se obtuvo: {} pero se esperaba: {}",
+	"project.scg.invalid_resource_content_version": "Versión de contenido de recurso no válida, se obtuvo: {} pero se esperaba: {}",
+	"project.scg.invalid_scg_magic": "Magic de SCG incorrecto, debería empezar con \"1gcs\"",
+	"project.scg.invalid_scg_version": "Versión de SCG no válida, se obtuvo: {} pero se esperaba 4",
+	"project.scg.invalid_texture_format_category": "Categoría de formato de textura no válida",
+	"project.scg.mismatch_image_height": "Altura de imagen incorrecta en {} en image y {} en info",
+	"project.scg.mismatch_image_width": "Ancho de imagen incorrecta en {}, {} en image y {} en info",
+	"project.scg.must_be_bnk_file": "Item {} debe ser un archivo con extensión \".rton\"",
+	"project.scg.must_be_folder_and_no_file_extension": "Item {} debe ser un folder sin extensión",
+	"project.scg.must_be_image_type": "DataType en {} debe ser \"Image\"",
+	"project.scg.must_be_json_file": "Item {} debe ser un archivo con extensión \".json\"",
+	"project.scg.must_be_pam_file": "Item {} debe ser un archivo con extensión \".pam\"",
+	"project.scg.must_be_popanim_type": "Item {} debe ser de tipo \"PopAnim\"",
+	"project.scg.must_be_rton_file": "Item {} debe ser un archivo con extensión \".rton\"",
+	"project.scg.pam_is_corrupted": "Item {} es un pam corrupto.",
+	"project.scg.resolution_mismatch": "Resolución incorrecta en {}, {} en SCG y {} en animación",
+	"project.scg.same_id_but_image_mismatch": "Las animaciones usan el mismo image de ID {}, pero no concuerda",
 	"pvz2_android_cn": "Android (PvZ 2 Versión China)",
 	"read_position_cannot_be_smaller_than_size": "La posición de lectura no puede ser menor que el tamaño, se obtuvo: {}, tamaño: {}",
 	"result": "Resultado",
@@ -715,8 +715,8 @@
 	"popcap.animation.from_flash.sprite_has_no_frames": "El sprite {} no tiene la propiedad \"frames\" en \"DOMLayer\" en la capa {}, asegúrese que <frames> esté dentro de <DOMLayer>",
 	"popcap.animation.from_flash.sprite_has_no_layers": "El sprite {} no tiene la propiedad \"layers\", asegúrese que el sprite contenga <layers>",
 	"popcap.animation.from_flash.sprite_has_no_timeline": "El sprite {} no tiene la propiedad \"timeline\", asegúrese que el sprite contenga <timeline>",
-	"pvz2.scg.exchange_custom_resource_info.invalid_convert": "No se pudo convertir el tipo de recursos, se obtuvo: {}",
-	"pvz2.scg.exchange_subgroup_compression_info.invalid_convert": "No se pudo obtener la resolución desde el res-info, la resolución dada no es un número, se obtuvo: {}",
+	"project.scg.exchange_custom_resource_info.invalid_convert": "No se pudo convertir el tipo de recursos, se obtuvo: {}",
+	"project.scg.exchange_subgroup_compression_info.invalid_convert": "No se pudo obtener la resolución desde el res-info, la resolución dada no es un número, se obtuvo: {}",
 	"popcap.animation.from_flash.frame_index_is_not_a_number": "El índice del fotograma no es un número, sprite: {}, valor: {}",
 	"popcap.animation.from_flash.frame_duration_is_not_a_number": "La duración del fotograma no es un número, sprite: {}, valor: {}",
 	"popcap.animation.from_flash.animation_must_have_one_label": "La animación debe contener al menos una etiqueta",
