--- a/Script/Setting/Language/vi-vn.json
+++ b/Script/Setting/Language/vi-vn.json
@@ -499,34 +499,34 @@
 	"popcap.zlib.uncompress.mismatch_zlib_magic": "Magic Zlib magic không khớp, nên bắt đầu bằng",
 	"popcap.zlib.uncompress.use_64_bit_variant": "Sử dụng biến thể 64-bit",
 	"process": "tiến trình",
-	"pvz2.scg.animation_split_label": "Label Tách Hoạt ảnh",
-	"pvz2.scg.decode": "PvZ 2 Sen-Composite-Group: Giải mã",
-	"pvz2.scg.decode.generic": "Phương thức Giải mã",
-	"pvz2.scg.enable_debug": "Bật Gỡ lỗi",
-	"pvz2.scg.encode": "PvZ 2 Sen-Composite-Group: Mã hoá",
-	"pvz2.scg.encode.generic": "Phương thức Mã hoá",
+	"project.scg.animation_split_label": "Label Tách Hoạt ảnh",
+	"project.scg.decode": "PvZ 2 Sen-Composite-Group: Giải mã",
+	"project.scg.decode.generic": "Phương thức Giải mã",
+	"project.scg.enable_debug": "Bật Gỡ lỗi",
+	"project.scg.encode": "PvZ 2 Sen-Composite-Group: Mã hoá",
+	"project.scg.encode.generic": "Phương thức Mã hoá",
 	"pvz2.project.compile": "Dự án PvZ 2: Biên dịch",
 	"pvz2.project.create": "Dựi án PvZ 2: Tạo",
-	"pvz2.scg.general_cannot_cotain_image": "Composite SCG bị sai, do đó nó không thể chứa loại \"Image\"",
-	"pvz2.scg.invalid_data_type": "Kiểu dữ liệu không hợp lệ, nhận được: {} mà không được xác định trong bảng dữ liệu",
-	"pvz2.scg.invalid_image_format": "Định dạng hình ảnh không hợp lệ, nhận được: {} mà không được xác định trong bảng định dạng",
-	"pvz2.scg.invalid_resource_content_size": "Kích thước nội dung resource không hợp lệ, nhận được: {} nhưng dự kiến: {}",
-	"pvz2.scg.invalid_resource_content_version": "Phiên bản nội dung resource không hợp lệ, nhận được: {} nhưng dự kiến: {}",
-	"pvz2.scg.invalid_scg_magic": "Magic SCG không khớp, phải bắt đầu bằng \"1gcs\"",
-	"pvz2.scg.invalid_scg_version": "Phiên bản SCG không hợp lệ, nhận được: {} nhưng phiên bản dự kiến là 4",
-	"pvz2.scg.invalid_texture_format_category": "Danh mục định dạng texture không hợp lệ",
-	"pvz2.scg.mismatch_image_height": "Chiều cao hình ảnh không khớp tại {}, {} trong hình ảnh và {} trong thông tin",
-	"pvz2.scg.mismatch_image_width": "Chiều rộng hình ảnh không khớp tại {}, {} trong hình ảnh và {} trong thông tin",
-	"pvz2.scg.must_be_bnk_file": "Mục {} phải là tệp có phần mở rộng \".rton\"",
-	"pvz2.scg.must_be_folder_and_no_file_extension": "Mục {} phải là thư mục không có phần mở rộng",
-	"pvz2.scg.must_be_image_type": "DataType trong {} phải là \"Image\"",
-	"pvz2.scg.must_be_json_file": "Mục {} phải là tệp có phần mở rộng \".json\"",
-	"pvz2.scg.must_be_pam_file": "Mục {} phải là tệp có phần mở rộng \".pam\"",
-	"pvz2.scg.must_be_popanim_type": "Mục {} phải là loại \"PopAnim\"",
-	"pvz2.scg.must_be_rton_file": "Mục {} phải là tệp có phần mở rộng \".rton\"",
-	"pvz2.scg.pam_is_corrupted": "Mục {} là một pam bị hỏng",
-	"pvz2.scg.resolution_mismatch": "Độ phân giải không khớp tại {}, {} trong SCG và {} trong hoạt ảnh",
-	"pvz2.scg.same_id_but_image_mismatch": "Hoạt ảnh sử dụng cùng một ID hình ảnh {}, nhưng chúng không khớp",
+	"project.scg.general_cannot_cotain_image": "Composite SCG bị sai, do đó nó không thể chứa loại \"Image\"",
+	"project.scg.invalid_data_type": "Kiểu dữ liệu không hợp lệ, nhận được: {} mà không được xác định trong bảng dữ liệu",
+	"project.scg.invalid_image_format": "Định dạng hình ảnh không hợp lệ, nhận được: {} mà không được xác định trong bảng định dạng",
+	"project.scg.invalid_resource_content_size": "Kích thước nội dung resource không hợp lệ, nhận được: {} nhưng dự kiến: {}",
+	"project.scg.invalid_resource_content_version": "Phiên bản nội dung resource không hợp lệ, nhận được: {} nhưng dự kiến: {}",
+	"project.scg.invalid_scg_magic": "Magic SCG không khớp, phải bắt đầu bằng \"1gcs\"",
+	"project.scg.invalid_scg_version": "Phiên bản SCG không hợp lệ, nhận được: {} nhưng phiên bản dự kiến là 4",
+	"project.scg.invalid_texture_format_category": "Danh mục định dạng texture không hợp lệ",
+	"project.scg.mismatch_image_height": "Chiều cao hình ảnh không khớp tại {}, {} trong hình ảnh và {} trong thông tin",
+	"project.scg.mismatch_image_width": "Chiều rộng hình ảnh không khớp tại {}, {} trong hình ảnh và {} trong thông tin",
+	"project.scg.must_be_bnk_file": "Mục {} phải là tệp có phần mở rộng \".rton\"",
+	"project.scg.must_be_folder_and_no_file_extension": "Mục {} phải là thư mục không có phần mở rộng",
+	"project.scg.must_be_image_type": "DataType trong {} phải là \"Image\"",
+	"project.scg.must_be_json_file": "Mục {} phải là tệp có phần mở rộng \".json\"",
+	"project.scg.must_be_pam_file": "Mục {} phải là tệp có phần mở rộng \".pam\"",
+	"project.scg.must_be_popanim_type": "Mục {} phải là loại \"PopAnim\"",
+	"project.scg.must_be_rton_file": "Mục {} phải là tệp có phần mở rộng \".rton\"",
+	"project.scg.pam_is_corrupted": "Mục {} là một pam bị hỏng",
+	"project.scg.resolution_mismatch": "Độ phân giải không khớp tại {}, {} trong SCG và {} trong hoạt ảnh",
+	"project.scg.same_id_but_image_mismatch": "Hoạt ảnh sử dụng cùng một ID hình ảnh {}, nhưng chúng không khớp",
 	"pvz2_android_cn": "Phiên bản PvZ 2 Trung Quốc cho Android",
 	"read_position_cannot_be_smaller_than_size": "Vị trí đọc không thể nhỏ hơn kích thước, nhận được: {}, kích thước: {}",
 	"result": "Kết quả",
@@ -717,8 +717,8 @@
 	"popcap.animation.from_flash.sprite_has_no_frames": "Sprite {} has no property \"frames\" in \"DOMLayer\" in layer {}, you should make sure that <frames> tag is inside <DOMLayer> tag",
 	"popcap.animation.from_flash.sprite_has_no_layers": "Sprite {} has no property \"layers\", you should make sure that sprite must contains the <layers> tag",
 	"popcap.animation.from_flash.sprite_has_no_timeline": "Sprite {} has no property \"timeline\", you should make sure that sprite must contains the <timeline> tag",
-	"pvz2.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
-	"pvz2.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
+	"project.scg.exchange_custom_resource_info.invalid_convert": "Cannot convert resources type, got: {}",
+	"project.scg.exchange_subgroup_compression_info.invalid_convert": "Cannot get resolution from the res-info, the provided resolution is not a number of string, got value: {}",
 	"popcap.animation.from_flash.frame_index_is_not_a_number": "Frame index is not a number, sprite: {}, value: {}",
 	"popcap.animation.from_flash.frame_duration_is_not_a_number": "Frame duration is not a number, sprite: {}, value: {}",
 	"popcap.animation.from_flash.animation_must_have_one_label": "Animation must have at least one label",
