--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -278,5 +278,79 @@
 	"waiting_for_user": "Waiting for user",
 	"argument_got": "Argument got",
 	"screenshot_taken": "Screenshot taken",
-	"take_screenshot": "Take screenshot"
+	"take_screenshot": "Take screenshot",
+	"island_config": "Island Config",
+	"star_cost": "Star Cost",
+	"plant_type": "Plant Type",
+	"upgrade_type": "Upgrade Type",
+	"parent_must_have_the_same_name": "Parent must have same name",
+	"island": "Island",
+	"key_cost": "Key Cost",
+	"press_enter_to_save": "Press \"Enter\" on your keyboard to save the changes",
+	"map_completed": "Map completed",
+	"island_image_border": "Island Image Border",
+	"animated_island_border": "Animated Island Border",
+	"island_image_shop": "Islands Shop",
+	"shortcut_menu": "Shortcut Menu",
+	"open_world_map": "Open World Map",
+	"color": "Color",
+	"time_space": "Time Space",
+	"sui_logo": "SUI logo",
+	"hide_missing_art": "Hide Missing Art",
+	"hide_old_events": "Hide Old Events",
+	"use_map_path": "Use Map Path",
+	"background": "Background",
+	"save_world_map": "Save World Map",
+	"cannot_load_ready_plant": "Cannot load ready plant",
+	"cannot_load_key_gate_flag": "Cannot load Key gate flag",
+	"rectangle_tool": "Rectangle Tool",
+	"erase_tool": "Erase Tool",
+	"resize_tool": "Resize Tool",
+	"clear_tool": "Clear Tool",
+	"open_config": "Open Config",
+	"open_shortcut_menu": "Open Shortcut Menu",
+	"copy": "Copy",
+	"paste": "Paste",
+	"undo": "Undo",
+	"redo": "Redo",
+	"open_layer": "Open Layers",
+	"open_history": "Open History",
+	"open_settings": "Open Setting",
+	"open_palette": "Open Palette",
+	"event_shop": "Events Shop",
+	"animation_pieces_shop": "Animation Pieces Shop",
+	"world_resources": "World Resources",
+	"more_actions": "More actions",
+	"failed_to_load_worldmap": "Failed to load WorldMap",
+	"cannot_load_info_icon": "Cannot load info icon",
+	"cannot_load_sprout": "Cannot load sprout",
+	"cannot_load_doodad": "Cannot load doodad",
+	"cannot_load_pathNode": "Cannot load pathNode",
+	"world_resources_changed": "World Resources Changed",
+	"unlocked_from_must_have_the_same_name": "Unlocked from must have same name",
+	"piece_layer": "Piece Layer",
+	"level_data": "Level Data",
+	"cannot_load_star_gate": "Cannot load star gate",
+	"cannot_load_sod_roll": "Cannot load sod roll",
+	"cannot_load_collected_upgrade_effect": "Cannot load collected upgrade effect",
+	"select_multiple_items_by_rectangle": "Select multiple items by rectangle",
+	"shortcut_help": "Shortcut Help",
+	"shortcut_help_description": "Open the list of Shortcut",
+	"select": "Select",
+	"island_image": "Island image",
+	"island_image_description": "Open island image selection list and place an island image piece",
+	"island_animation": "Island animation",
+	"island_animation_description": "Open island animation selection list and place an island animation piece",
+	"layer_description": "Open layer system to process with tool",
+	"history": "History",
+	"history_description": "Preview your previous work",
+	"visible_from": "Visible From",
+	"visible_from_must_have_same_name": "Visible From must have the same name",
+	"level_type": "Level Type",
+	"display_text": "Display Text",
+	"narration_unlocked": "Narration Unlocked",
+	"narration_completed": "Narration Completed",
+	"level_tutorial_when": "Level Tutorial When",
+	"level_toggle": "Level Toggle",
+	"event_settings": "Event Settings"
 }
