--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -352,5 +352,7 @@
 	"narration_completed": "Narration Completed",
 	"level_tutorial_when": "Level Tutorial When",
 	"level_toggle": "Level Toggle",
-	"event_settings": "Event Settings"
+	"event_settings": "Event Settings",
+	"frame": "Frame",
+	"reset_focus": "Reset Focus"
 }
