--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -354,5 +354,83 @@
 	"level_toggle": "Level Toggle",
 	"event_settings": "Event Settings",
 	"frame": "Frame",
-	"reset_focus": "Reset Focus"
+	"reset_focus": "Reset Focus",
+	"cannot_load_ready_packet": "Cannot load ready packet",
+	"island_change_id": "Change Island ID",
+	"island_scale": "Scale Island",
+	"island_change_layer": "Change Island Layer",
+	"island_change_parallax": "Change Island Parallax",
+	"island_rotate": "Rotate Island",
+	"island_change_rotation_rate": "Change Rotation Rate",
+	"island_art_flip": "Flip Island",
+	"event_change_id": "Change Event ID",
+	"event_change_name": "Change Event Name",
+	"event_change_parent": "Change Event Parent",
+	"event_change_unlocked_from": "Change Unlocked From",
+	"event_change_visible_from": "Change Visible From",
+	"event_change_auto_visible": "Change Auto Visible",
+	"event_change_level_data": "Change Level Data",
+	"event_change_display_text": "Change Display Text",
+	"event_change_nar_unlocked": "Change Narration Unlocked",
+	"event_change_nar_completed": "Change Narration Completed",
+	"event_change_tutorial": "Change Level Tutorial",
+	"event_change_tutorial_unlocked": "Change Tutorial Unlocked",
+	"event_change_level_toggle": "Change Level Toggle",
+	"event_change_plant_type": "Change Plant Type",
+	"event_change_upgrade_type": "Change Upgrade Type",
+	"event_change_star_cost": "Change Star Cost",
+	"event_change_key_cost": "Change Key Cost",
+	"event_art_flip": "Flip Event",
+	"add_item": "Add Item",
+	"move_item": "Move Item",
+	"erase_item": "Erase Item",
+	"paste_item": "Paste Item",
+	"select_item": "Select Item",
+	"rectangle_select": "Rectangle Select",
+	"deselect": "Deselect",
+	"map_change_name": "Change World Name",
+	"map_change_world_id": "Change World ID",
+	"map_change_res_id": "Change Res ID",
+	"map_change_bounding": "Resize Map Bounding",
+	"new_map_editor": "New Window",
+	"load_world_resource": "Load World Resource",
+	"create_new_layer": "Create New Layer",
+	"delete_layer": "Delete Layer",
+	"merge_down_layer": "Merge Down Layer",
+	"move_up_layer": "Move Up Layer",
+	"move_down_layer": "Move Down Layer",
+	"event_node_pinata": "Pinata",
+	"event_node_plant": "Plant",
+	"event_node_gift_box": "Gift Box",
+	"event_node_upgrade": "Upgrade",
+	"event_node_normal_level": "Normal Level",
+	"event_node_minigame_level": "Minigame Level",
+	"event_node_miniboss_level": "Miniboss Level",
+	"event_node_nonfinal_boss": "Nonfinal Boss",
+	"event_node_boss_level": "Boss Level",
+	"event_node_danger": "Danger",
+	"event_node_star_gate": "Star Gate",
+	"event_node_key_gate": "Key Gate",
+	"event_node_path_node": "Path Node",
+	"event_node_doodad": "Doodad",
+	"exit": "Exit",
+	"confirm_exit": "Are you sure want to exit?",
+	"back": "Back",
+	"plant_costume": "Plant Costume",
+	"section_select": "Section Select",
+	"section_island_image": "Section Island Image",
+	"section_island_animation": "Section Island Animation",
+	"section_event": "Section Event",
+	"move_up": "Move Up",
+	"move_left": "Move Left",
+	"move_down": "Move Down",
+	"move_right": "Move Right",
+	"rotate_counter_clockwise": "Rotate Counter Clockwise",
+	"rotate_clockwise": "Rotate Clockwise",
+	"decrease_scale_x": "Decrease Scale X",
+	"increase_scale_x": "Increase Scale X",
+	"decrease_scale_y": "Decrease Scale Y",
+	"increase_scale_y": "Increase Scale Y",
+	"flip": "Flip",
+	"cut": "Cut"
 }
