--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -443,5 +443,6 @@
 	"option": "Option",
 	"tool_description": "Main container of the Worldmap",
 	"item_description": "Item list that support make your map simpler",
-	"option_description": "Configure your Worldmap"
+	"option_description": "Configure your Worldmap",
+	"task": "Task"
 }
