--- a/Modding/lib/l10n/app_es.arb
+++ b/Modding/lib/l10n/app_es.arb
@@ -252,5 +252,201 @@
 	"play": "Reproducir",
 	"stop": "Detener",
 	"forward": "Adelantar",
-	"zoom_in": "Acercar"
+	"zoom_in": "Acercar",
+	"launch_immediately": "Launch immediately",
+	"show_confirm_dialog": "Show confirm dialog",
+	"js_settings": "JS Settings",
+	"do_you_wish_to_run": "Do you wish to run script {module_name}?",
+	"script_not_found": "Script not found",
+	"restart": "Restart",
+	"animation_file": "Animation file: {file}",
+	"media_directory": "Media directory: {media_path}",
+	"unselected": "Unselected",
+	"disable_all_sprite": "Disable all sprites",
+	"disable_all_image": "Disable all images",
+	"enable_all_sprite": "Enable all sprites",
+	"enable_all_image": "Enable all images",
+	"reload_script": "Reload Scripts",
+	"run_as_launcher": "Run as Launcher",
+	"show_confirm_dialog_description": "Confirm to launch Shell",
+	"run_as_launcher_description": "Run script with Console",
+	"spawn_success": "Successfully run the script {script_name} with launcher!",
+	"run_immediately": "Run immediately",
+	"run_immediately_description": "Run Shell immediately once you enter",
+	"launch": "Launch",
+	"shell_configuration": "Shell Configuration",
+	"waiting_for_user": "Waiting for user",
+	"argument_got": "Argument got",
+	"screenshot_taken": "Screenshot taken",
+	"take_screenshot": "Take screenshot",
+	"island_config": "Island Config",
+	"star_cost": "Star Cost",
+	"plant_type": "Plant Type",
+	"upgrade_type": "Upgrade Type",
+	"parent_must_have_the_same_name": "Parent must have same name",
+	"island": "Island",
+	"key_cost": "Key Cost",
+	"press_enter_to_save": "Press \"Enter\" on your keyboard to save the changes",
+	"map_completed": "Map completed",
+	"island_image_border": "Island Image Border",
+	"animated_island_border": "Animated Island Border",
+	"island_image_shop": "Islands Shop",
+	"shortcut_menu": "Shortcut Menu",
+	"open_world_map": "Open World Map",
+	"color": "Color",
+	"time_space": "Time Space",
+	"sui_logo": "SUI logo",
+	"hide_missing_art": "Hide Missing Art",
+	"hide_old_events": "Hide Old Events",
+	"use_map_path": "Use Map Path",
+	"background": "Background",
+	"save_world_map": "Save World Map",
+	"cannot_load_ready_plant": "Cannot load ready plant",
+	"cannot_load_key_gate_flag": "Cannot load Key gate flag",
+	"rectangle_tool": "Rectangle Tool",
+	"erase_tool": "Erase Tool",
+	"resize_tool": "Resize Tool",
+	"clear_tool": "Clear Tool",
+	"open_config": "Open Config",
+	"open_shortcut_menu": "Open Shortcut Menu",
+	"copy": "Copy",
+	"paste": "Paste",
+	"undo": "Undo",
+	"redo": "Redo",
+	"open_layer": "Open Layers",
+	"open_history": "Open History",
+	"open_settings": "Open Setting",
+	"open_palette": "Open Palette",
+	"event_shop": "Events Shop",
+	"animation_pieces_shop": "Animation Pieces Shop",
+	"world_resources": "World Resources",
+	"more_actions": "More actions",
+	"failed_to_load_worldmap": "Failed to load WorldMap",
+	"cannot_load_info_icon": "Cannot load info icon",
+	"cannot_load_sprout": "Cannot load sprout",
+	"cannot_load_doodad": "Cannot load doodad",
+	"cannot_load_pathNode": "Cannot load pathNode",
+	"world_resources_changed": "World Resources Changed",
+	"unlocked_from_must_have_the_same_name": "Unlocked from must have same name",
+	"piece_layer": "Piece Layer",
+	"level_data": "Level Data",
+	"cannot_load_star_gate": "Cannot load star gate",
+	"cannot_load_sod_roll": "Cannot load sod roll",
+	"cannot_load_collected_upgrade_effect": "Cannot load collected upgrade effect",
+	"select_multiple_items_by_rectangle": "Select multiple items by rectangle",
+	"shortcut_help": "Shortcut Help",
+	"shortcut_help_description": "Open the list of Shortcut",
+	"select": "Select",
+	"island_image": "Island image",
+	"island_image_description": "Open island image selection list and place an island image piece",
+	"island_animation": "Island animation",
+	"island_animation_description": "Open island animation selection list and place an island animation piece",
+	"layer_description": "Open layer system to process with tool",
+	"history": "History",
+	"history_description": "Preview your previous work",
+	"visible_from": "Visible From",
+	"visible_from_must_have_same_name": "Visible From must have the same name",
+	"level_type": "Level Type",
+	"display_text": "Display Text",
+	"narration_unlocked": "Narration Unlocked",
+	"narration_completed": "Narration Completed",
+	"level_tutorial_when": "Level Tutorial When",
+	"level_toggle": "Level Toggle",
+	"event_settings": "Event Settings",
+	"frame": "Frame",
+	"reset_focus": "Reset Focus",
+	"cannot_load_ready_packet": "Cannot load ready packet",
+	"island_change_id": "Change Island ID",
+	"island_scale": "Scale Island",
+	"island_change_layer": "Change Island Layer",
+	"island_change_parallax": "Change Island Parallax",
+	"island_rotate": "Rotate Island",
+	"island_change_rotation_rate": "Change Rotation Rate",
+	"island_art_flip": "Flip Island",
+	"event_change_id": "Change Event ID",
+	"event_change_name": "Change Event Name",
+	"event_change_parent": "Change Event Parent",
+	"event_change_unlocked_from": "Change Unlocked From",
+	"event_change_visible_from": "Change Visible From",
+	"event_change_auto_visible": "Change Auto Visible",
+	"event_change_level_data": "Change Level Data",
+	"event_change_display_text": "Change Display Text",
+	"event_change_nar_unlocked": "Change Narration Unlocked",
+	"event_change_nar_completed": "Change Narration Completed",
+	"event_change_tutorial": "Change Level Tutorial",
+	"event_change_tutorial_unlocked": "Change Tutorial Unlocked",
+	"event_change_level_toggle": "Change Level Toggle",
+	"event_change_plant_type": "Change Plant Type",
+	"event_change_upgrade_type": "Change Upgrade Type",
+	"event_change_star_cost": "Change Star Cost",
+	"event_change_key_cost": "Change Key Cost",
+	"event_art_flip": "Flip Event",
+	"add_item": "Add Item",
+	"move_item": "Move Item",
+	"erase_item": "Erase Item",
+	"paste_item": "Paste Item",
+	"select_item": "Select Item",
+	"rectangle_select": "Rectangle Select",
+	"deselect": "Deselect",
+	"map_change_name": "Change World Name",
+	"map_change_world_id": "Change World ID",
+	"map_change_res_id": "Change Res ID",
+	"map_change_bounding": "Resize Map Bounding",
+	"new_map_editor": "New Window",
+	"load_world_resource": "Load World Resource",
+	"create_new_layer": "Create New Layer",
+	"delete_layer": "Delete Layer",
+	"merge_down_layer": "Merge Down Layer",
+	"move_up_layer": "Move Up Layer",
+	"move_down_layer": "Move Down Layer",
+	"event_node_pinata": "Pinata",
+	"event_node_plant": "Plant",
+	"event_node_gift_box": "Gift Box",
+	"event_node_upgrade": "Upgrade",
+	"event_node_normal_level": "Normal Level",
+	"event_node_minigame_level": "Minigame Level",
+	"event_node_miniboss_level": "Miniboss Level",
+	"event_node_nonfinal_boss": "Nonfinal Boss",
+	"event_node_boss_level": "Boss Level",
+	"event_node_danger": "Danger",
+	"event_node_star_gate": "Star Gate",
+	"event_node_key_gate": "Key Gate",
+	"event_node_path_node": "Path Node",
+	"event_node_doodad": "Doodad",
+	"exit": "Exit",
+	"confirm_exit": "Are you sure want to exit?",
+	"back": "Back",
+	"plant_costume": "Plant Costume",
+	"section_select": "Section Select",
+	"section_island_image": "Section Island Image",
+	"section_island_animation": "Section Island Animation",
+	"section_event": "Section Event",
+	"move_up": "Move Up",
+	"move_left": "Move Left",
+	"move_down": "Move Down",
+	"move_right": "Move Right",
+	"rotate_counter_clockwise": "Rotate Counter Clockwise",
+	"rotate_clockwise": "Rotate Clockwise",
+	"decrease_scale_x": "Decrease Scale X",
+	"increase_scale_x": "Increase Scale X",
+	"decrease_scale_y": "Decrease Scale Y",
+	"increase_scale_y": "Increase Scale Y",
+	"flip": "Flip",
+	"cut": "Cut",
+	"loading_map_resources": "Loading map resources, please wait...",
+	"input_value": "Write some value",
+	"select_an_option": "Select an option...",
+	"attach": "Attach",
+	"export_log": "Export log",
+	"tool": "Tool",
+	"item": "Item",
+	"option": "Option",
+	"tool_description": "Main container of the Worldmap",
+	"item_description": "Item list that support make your map simpler",
+	"option_description": "Configure your Worldmap",
+	"task": "Task",
+	"scale": "Scale",
+	"playing": "Playing",
+	"current": "Current",
+	"translator": "Translator"
 }
