--- a/Modding/lib/l10n/app_vi.arb
+++ b/Modding/lib/l10n/app_vi.arb
@@ -105,12 +105,12 @@
 	"successfully_applied_your_configuration": "Successfully applied your configuration!",
 	"confirmation": "Confirmation",
 	"confirm_apply_configuration": "Are you sure want to apply configuration?",
-	"backup_configuration": "Backup Configuration",
+	"backup_configuration": "Backup config",
 	"backup_configuration_description": "Backup your configuration before you lost it!",
-	"upload_configuration": "Upload configuration",
-	"save_configuration": "Save Configuration",
-	"load_configuration": "Load Configuration",
-	"apply_configuration": "Apply Configuration",
+	"upload_configuration": "Upload config",
+	"save_configuration": "Save config",
+	"load_configuration": "Load config",
+	"apply_configuration": "Apply config",
 	"info": "Info",
 	"configuration_has_been_loaded": "Configuration has been loaded",
 	"miscellaneous": "Miscellaneous",
