--- a/Website/lib/l10n/app_ru.arb
+++ b/Website/lib/l10n/app_ru.arb
@@ -6,7 +6,7 @@
   "community_forum": "Форум сообщества",
   "community_support": "Поддержка от сообщества",
   "contact": "Свяжитесь с нами",
-  "date": "День",
+  "date": "Дата",
   "discord_server": "Discord сервер",
   "documentation": "Документация",
   "download": "Скачать",
