--- a/Website/lib/l10n/app_vi.arb
+++ b/Website/lib/l10n/app_vi.arb
@@ -13,9 +13,9 @@
   "download_again": "Tải lại",
   "download_for_android": "Tải xuống cho Android",
   "download_for_windows": "Tải xuống cho Windows",
-  "download_now": "Tải xuống",
+  "download_now": "Tải xuống công cụ",
   "download_page": "Trang tải xuống",
-  "download_start_automatically": "Yêu cầu tải xuống thực hiện lập tức. Nếu không được, thử sử dụng liên kết bên dưới.",
+  "download_start_automatically": "Yêu cầu tải xuống được thực hiện ngay lập tức. Nếu không thể tải xuống, vui lòng thử sử dụng liên kết bên dưới.",
   "faq": "Hỏi đáp",
   "file_type": "Định dạng tệp",
   "flutter_description": "Framework triển giao diện người dùng đẹp do Google phát triển. Chủ yếu được sử dụng trong ứng dụng GUI và cả trang web này.",
