--- a/Modding/lib/l10n/app_de.arb
+++ b/Modding/lib/l10n/app_de.arb
@@ -456,5 +456,5 @@
 	"close_tabs_to_the_left": "Alle Linken Registerkarten Schließen",
 	"close_tabs_to_the_right": "Alle Rechten Registerkarten Schließen",
 	"reload_map_resources": "Weltkarten Resourcen neu laden",
-	"sen_is_listening": "Sen hört zu.."
+	"sen_is_listening": "Sen hört zu"
 }
