--- a/Modding/lib/l10n/app_en.arb
+++ b/Modding/lib/l10n/app_en.arb
@@ -457,5 +457,23 @@
 	"sen_is_listening": "Sen is listening",
 	"copied_to_clipboard": "Copied to clipboard!",
 	"copy_json": "Copy JSON",
-	"level_tutorial": "Level Tutorial"
+	"level_tutorial": "Level Tutorial",
+	"show_label": "Show label",
+	"show_label_description": "Show the amount of media of file",
+	"de": "German",
+	"fr": "French",
+	"setup_toolchain": "Setup toolchain",
+	"setup_toolchain_description": "You need to setup toolchain in order to use Sen: Environment.",
+	"setup_toolchain_mobile": "Press the button below to download the Script.",
+	"setup_toolchain_desktop": "You need to specify the path to the local Sen version that you installed on your machine.",
+	"setup_toolchain_desktop_01": "The path need to be a directory contains Sen's component, example: Kernel, Script, Shell.",
+	"setup_toolchain_desktop_02": "Please choose a valid path otherwise Sen will broke! Also, if your Sen crashed, please install Microsoft Visual C++ Redistributable to your Windows machine.",
+	"for_mobile": "For Mobile users, please refer to this instruction:",
+	"for_desktop": "For Desktop users, please refer to this instruction:",
+	"other_modules_setup": "For other modules, no need to setup them. All will work if the toolchain is set correctly. You can configure the toolchain again in the Settings.",
+	"map_editor_setup": "For Map Editor, click on the Settings logo on the card. Please provide it the path to the Map Editor resources, the resources is downloadable on the official website.",
+	"level_maker_setup": "For Level Maker, click on the Settings logo on the card. Please provide it the path to the Level Maker resources, the resources is downloadable on the official website.",
+	"setup_ending": "Happy Gaming! May Sen guides you to a successful mod.",
+	"congratulation": "Congratulation",
+	"congratulation_description": "You have setup Sen successfully! For any bugs report, updates, helps, please consider joining my server. Happy Modding!"
 }
